--- a/idex.html
+++ b/idex.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+!DOCTYPE html>
+<html la<ng="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,13 @@
     <a href="#"> Minha Escola </a>
      </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
+            <!--graficos aqui-->
+        </section>
+    </main>
+    <footer>
+        <p>Desenvolvido por Gaby stepniak</p>
+    </footer>
 </body>
 </html>
