--- a/idex.html
+++ b/idex.html
@@ -1,8 +1,9 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html la<ng="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Redes Socias</title>
 </head>
 <body>
