--- a/idex.html
+++ b/idex.html
@@ -22,5 +22,7 @@
     <footer>
         <p>Desenvolvido por Gaby stepniak</p>
     </footer>
+    <script type="module" src="informacoesGlobais/informacoesGlobais.js"></script>
 </body>
 </html>
+ 
