--- a/idex.html
+++ b/idex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src "https://cdn.plot.ly/plotly-2.27.0.min.js." charset="UTF-8"></script>
     <title>Redes Socias</title>
 </head>
 <body>
@@ -23,6 +24,7 @@
         <p>Desenvolvido por Gaby stepniak</p>
     </footer>
     <script type="module" src="informacoesGlobais/informacoesGlobais.js"></script>
+    <script type="module" src="informacoesGlobais/quantidadeUsuarios.js"></script>
 </body>
 </html>
  
